<resources>
    <string name="app_name">NoCash</string>

    <string name="registration">Daftar</string>
    <string name="registration1">Buat Akun Baru</string>
    <string name="email">Email</string>
    <string name="phone">Nomer Handphone</string>
    <string name="status_user">Status Pengguna</string>
    <string name="selected_item">Selected item:</string>
    <string name="have_account">Sudah punya akun ?</string>
    <string name="image">Image\n</string>
    <string name="otp">Masukkan OTP yang kami</string>
    <string name="otp1">kirim SMS</string>
    <string name="otp2">Kode-nya kami kirim kan ke nomer +62 8*******</string>
    <string name="otp3">OTP</string>
    <string name="repeatsend">Kirim Ulang</string>
    <string name="numbersection">20 dtk</string>
    <string name="securitypin">Masukan PIN Keamanan</string>
    <string-array name="User">
        <item>Penjual</item>
        <item>Pembeli</item>
    </string-array>
    <string-array name="gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="category">
        <item>Warung</item>
        <item>Toko</item>
    </string-array>

    <string name="tips_scan_ktp">Foto Kartu Identitas Anda berupa KTP atau SIM dengan klik tombol \'Ambil Foto\', Pastikan kartu identitas Anda sudah jelas</string>
    <string-array name="type_user">
        <item name="item1">Pembeli</item>
        <item name="item2">Penjual</item>
    </string-array>


    <string name="tab_text_1">Transaksi</string>
    <string name="tab_text_2">Promo</string>
    <string name="content_tab_transaksi">Welcome Transaksi</string>
    <string name="content_tab_promo">Welcome Promo</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="otp_description">Masukkan OTP yang kami kirim SMS</string>
    <string name="send_code_to_number">Kode-nya kami kirim ke %1$s</string>
    <string name="kirim_ulang"><u>Kirim ulang</u></string>
    <string name="continue_btn">Lanjut</string>
    <string name="back_button">back_button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="invoice">Tagihan</string>
    <string name="profile">Profil</string>
    <string name="textup2">2 dari 2 Langkah</string>
    <string name="personaldata">Lakukan Pengisian Formulir Data Diri Anda</string>
    <string name="dateborn">Tanggal Lahir</string>
    <string name="live">Alamat</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Simpan</string>
    <string name="step"> %1$d dari %2$d langkah </string>
    <string name="title_pin">%1$s PIN Keamanan</string>
    <string name="login">login</string>
    <string name="Not_Have_Account">Belum punya akun? Daftar dulu</string>
    <string name="_0_detik">0 detik</string>
    <string name="forgotpassword">Lupa Password</string>
    <string name="username">Username</string>
    <string name="agree_privacy_policy">Saya setuju dengan</string>
    <string name="term_and_conditions"> Syarat dan ketentuan\n</string>
    <string name="privacy">Kebijakan privasi</string>

    <string name="contact_us">
        Kami di Nocash selalu siap membantu Anda. Jika Anda memiliki pertanyaan, saran, atau 
        membutuhkan bantuan, jangan ragu untuk menghubungi kami melalui salah satu cara di bawah ini:\n
        Email : support@nocash.com\n\n
        Tim dukungan kami siap menjawab pertanyaan Anda dan memberikan solusi yang Anda butuhkan. 
        Alamat Nocash Indonesia : Jl. Contoh No. 123, Jakarta, Indonesia\n\n
        Media Sosial Ikuti kami di media sosial untuk mendapatkan update terbaru, tips, dan dukungan:\n
        Facebook: facebook.com/nocash\n
        Twitter: twitter.com/nocash\n
        Instagram: instagram.com/nocash\n\n
        Formulir Kontak Anda juga bisa menghubungi kami melalui formulir kontak di aplikasi Nocash. 
        Buka aplikasi, pergi ke bagian Kontak Kami dan isi formulir dengan detail pertanyaan atau 
        masalah Anda. Tim kami akan segera menghubungi Anda. Kami berkomitmen untuk memberikan layanan 
        terbaik dan memastikan pengalaman Anda dengan Nocash selalu memuaskan. Jangan ragu untuk 
        menghubungi kami kapan saja. Terima kasih telah memilih Nocash!\n\n
        Nocash - Solusi Cerdas untuk Hutang Piutang Anda.
    </string>

    <string name="termCondition">
        Syarat dan Ketentuan Penggunaan Aplikasi Nocash
        Selamat datang di Nocash, aplikasi pencatatan hutang piutang yang memudahkan penjual dan
        pembeli dalam mengelola transaksi. Dengan menggunakan aplikasi Nocash, Anda setuju untuk
        mematuhi syarat dan ketentuan berikut ini:
    </string>

    <string name="privacyPolicy">
        Kebijakan Privasi Aplikasi Nocash\n\n
        Kami di Nocash menghargai privasi Anda dan berkomitmen untuk melindungi informasi pribadi
        Anda. Kebijakan Privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, menyimpan,
        dan melindungi data Anda saat menggunakan aplikasi Nocash.\n
    </string>
    <string name="closing_termcondition">Dengan mendaftar dan menggunakan aplikasi Nocash, Anda menyetujui semua syarat dan ketentuan yang disebutkan di atas. Jika Anda memiliki pertanyaan atau memerlukan bantuan, silakan hubungi layanan pelanggan kami.</string>
    <string name="welcome_to_nocash">Selamat menggunakan Nocash!</string>
    <string name="closing_privacypolicy">Dengan menggunakan aplikasi Nocash, Anda menyetujui pengumpulan dan penggunaan informasi sesuai dengan Kebijakan Privasi ini. Kami berkomitmen untuk melindungi privasi Anda dan memastikan bahwa informasi pribadi Anda aman dengan kami.</string>
    <string name="jargon_nocash">Nocash - Solusi Cerdas untuk Hutang Piutang Anda.</string>
    <string name="welcome">Selamat datang di NoCash!</string>
    <string name="nocash_adalah">Nocash adalah aplikasi pencatatan hutang piutang yang dirancang untuk memudahkan penjual dan pembeli dalam mengelola transaksi keuangan. Kami memahami bahwa dalam dunia bisnis dan kehidupan sehari-hari, mencatat hutang piutang bisa menjadi tugas yang menantang. Oleh karena itu, Nocash hadir sebagai solusi pintar yang membantu Anda mengelola dan melacak hutang piutang dengan lebih efisien, aman, dan mudah.</string>
    <string name="misi_nocash">Misi kami adalah memberikan alat yang intuitif dan efektif untuk membantu individu dan bisnis dalam mengelola transaksi hutang piutang. Kami berkomitmen untuk memberdayakan pengguna dengan fitur-fitur yang membuat pencatatan dan pengelolaan keuangan menjadi lebih sederhana dan transparan.</string>
    <string name="komitmen_nocash">Kami berkomitmen untuk terus berinovasi dan meningkatkan aplikasi Nocash sesuai dengan kebutuhan pengguna. Tim kami berdedikasi untuk memberikan layanan terbaik dan selalu siap mendengar masukan serta saran dari pengguna demi kesempurnaan aplikasi kami.</string>
    <string name="hubungi_kami">Kami selalu siap membantu dan menjawab pertanyaan Anda. Jika Anda memiliki pertanyaan, saran, atau membutuhkan bantuan, jangan ragu untuk menghubungi kami:\n
        Email: support@nocash.com\n
        Alamat: Jl. Contoh No. 123, Jakarta, Indonesia
    </string>
    <string name="closing_about_us">Terima kasih telah memilih Nocash sebagai partner terpercaya dalam mengelola hutang piutang Anda. Kami berharap dapat terus mendukung Anda dalam mencapai kesuksesan finansial dan bisnis yang lebih baik.</string>
    <string name="confirm_logout">Apakah anda yakin ingin keluar akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="placholder_seller">Buka Toko Anda dan mulailah mencatat setiap transaksi hutang piutang dengan fitur-fitur canggih Nocash</string>
    <string name="success_register">Selamat! Toko Anda  kini sudah siap digunakan. Mulailah mencatat transaksi dan mengelola hutang piutang dengan mudah dan efisien.</string>

    <string name="choose_an_image_from">Choose an Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>